--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "booleyou-client",
   "version": "1.0.0",
   "description": "booleYou-client: An Ionic project",
+  "scripts": {
+    "start": "ionic serve"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1",
