--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "booleYou-client: An Ionic project",
   "scripts": {
-    "start": "ionic serve"
+    "start": "ionic serve",
+    "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
     "express": "4.8.4",
@@ -16,6 +17,9 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "mocha": "latest",
+    "should": "latest",
+    "supertest": "latest"
   }
 }
